crates/haneul/src/unit_tests/snapshots/haneul__upgrade_compatibility__upgrade_compatibility_tests__empty.snap
---
source: crates/haneul/src/upgrade_compatibility/../unit_tests/upgrade_compatibility_tests.rs
expression: normalize_path(output)
---
error[EUC01006]: module missing
  ┌─ /fixtures/upgrade_errors/missing_module_toml/empty/Move.toml:1:1
  │
1 │ 
  │ ^ Package is missing module 'identifier'
  │
  = Modules which are part package cannot be removed during an upgrade.
  = Add missing module 'identifier' back to the package.
